grpc update user
