# docs/swagger/simple_bank.swagger.json
@@ -2,9 +2,9 @@
   "swagger": "2.0",
   "info": {
     "title": "SimpleBank API",
-    "version": "1.0",
+    "version": "1.2",
     "contact": {
-      "name": "gRPC-Gateway project",
+      "name": "Simple Bank",
       "url": "https://github.com/quocbaodoan",
       "email": "quocbaodoan1999@gmail.com"
     }
@@ -23,6 +23,8 @@
   "paths": {
     "/v1/create_user": {
       "post": {
+        "summary": "Create new user",
+        "description": "Use this API to create a new user.",
         "operationId": "SimpleBank_CreateUser",
         "responses": {
           "200": {
@@ -55,6 +57,8 @@
     },
     "/v1/login_user": {
       "post": {
+        "summary": "Login user",
+        "description": "Use this API to login user.",
         "operationId": "SimpleBank_LoginUser",
         "responses": {
           "200": {
@@ -77,6 +81,40 @@
             "required": true,
             "schema": {
               "$ref": "#/definitions/dbLoginUserRequest"
+            }
+          }
+        ],
+        "tags": [
+          "SimpleBank"
+        ]
+      }
+    },
+    "/v1/update_user": {
+      "post": {
+        "summary": "Update user",
+        "description": "Use this API to update user.",
+        "operationId": "SimpleBank_UpdateUser",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/dbUpdateUserResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/dbUpdateUserRequest"
             }
           }
         ],
@@ -145,6 +183,31 @@
         "refreshTokenExpiresAt": {
           "type": "string",
           "format": "date-time"
+        }
+      }
+    },
+    "dbUpdateUserRequest": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string"
+        },
+        "fullName": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "dbUpdateUserResponse": {
+      "type": "object",
+      "properties": {
+        "user": {
+          "$ref": "#/definitions/dbUser"
         }
       }
     },
